--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
-    <title th:text="${titulo}"></title>
-</head>
+<head th:replace="~{layout/layout :: head}"></head>
 <body>
-<h1 class="text-primary text-center" th:text="${titulo}"></h1>
+<header th:replace="~{layout/layout :: header}"></header>
+<h1 class="text-primary text-center pt-5" th:text="${titulo}"></h1>
 <div class="container">
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover mt-3 w-50 mx-auto">
         <thead>
         <tr>
+            <th scope="col">id</th>
             <th scope="col">Nombre</th>
             <th scope="col">Apellido</th>
             <th scope="col">Email</th>
+            <th scope="col">Fecha</th>
+            <th scope="col">Acciones</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>Juan</td>
-            <td>Pérez</td>
-            <td>juan.perez@example.com</td>
+        <tr th:each="cliente: ${clientes}">
+            <td th:text="${cliente.id}"></td>
+            <td th:text="${cliente.nombre}"></td>
+            <td th:text="${cliente.apellido}"></td>
+            <td th:text="${cliente.email}"></td>
+            <td th:text="${cliente.createAt}"></td>
+            <td><a class="btn btn-success btn-sm me-1" th:href="@{/form}"><i
+                    class="bi bi-plus"></i></a><a class="btn btn-warning btn-sm me-1"
+                                                  th:href="@{/form/{id}(id=${cliente.id})}"> <i
+                    class="bi bi-pencil-square"></i></a><a class="btn btn-danger btn-sm"
+                                                           th:href="@{/delete/{id}(id=${cliente.id})}"
+                                                           onclick="return confirm('¿Está seguro de eliminar el cliente?')">
+                <i class="bi bi-trash"></i>
+            </a></td>
         </tr>
         </tbody>
     </table>
 </div>
-
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
+<footer th:replace="~{layout/layout :: footer}"></footer>
 </body>
 </html>
