--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -4,36 +4,42 @@
 <body>
 <header th:replace="~{layout/layout :: header}"></header>
 <h1 class="text-primary text-center pt-5" th:text="${titulo}"></h1>
-<div class="container">
-    <table class="table table-striped table-hover mt-3 w-50 mx-auto">
-        <thead>
-        <tr>
-            <th scope="col">id</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Apellido</th>
-            <th scope="col">Email</th>
-            <th scope="col">Fecha</th>
-            <th scope="col">Acciones</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="cliente: ${clientes}">
-            <td th:text="${cliente.id}"></td>
-            <td th:text="${cliente.nombre}"></td>
-            <td th:text="${cliente.apellido}"></td>
-            <td th:text="${cliente.email}"></td>
-            <td th:text="${cliente.createAt}"></td>
-            <td><a class="btn btn-success btn-sm me-1" th:href="@{/form}"><i
-                    class="bi bi-plus"></i></a><a class="btn btn-warning btn-sm me-1"
-                                                  th:href="@{/form/{id}(id=${cliente.id})}"> <i
-                    class="bi bi-pencil-square"></i></a><a class="btn btn-danger btn-sm"
-                                                           th:href="@{/delete/{id}(id=${cliente.id})}"
-                                                           onclick="return confirm('¿Está seguro de eliminar el cliente?')">
-                <i class="bi bi-trash"></i>
-            </a></td>
-        </tr>
-        </tbody>
-    </table>
+<div class="container py-4 w-75">
+    <div class="card mx-auto bg-light">
+        <div class="card-header fw-bold" th:text="${titulo}"></div>
+        <div class="card-body">
+            <table class="table table-striped table-hover mt-3 mx-auto">
+                <thead>
+                <tr>
+                    <th scope="col">id</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Apellido</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Fecha</th>
+                    <th scope="col">Acciones</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="cliente: ${clientes}">
+                    <td th:text="${cliente.id}"></td>
+                    <td th:text="${cliente.nombre}"></td>
+                    <td th:text="${cliente.apellido}"></td>
+                    <td th:text="${cliente.email}"></td>
+                    <td th:text="${cliente.createAt}"></td>
+                    <td><a class="btn btn-success btn-sm me-1" th:href="@{/form}"><i
+                            class="bi bi-plus"></i></a><a class="btn btn-warning btn-sm me-1"
+                                                          th:href="@{/form/{id}(id=${cliente.id})}"> <i
+                            class="bi bi-pencil-square"></i></a><a class="btn btn-danger btn-sm"
+                                                                   th:href="@{/delete/{id}(id=${cliente.id})}"
+                                                                   onclick="return confirm('¿Está seguro de eliminar el cliente?')">
+                        <i class="bi bi-trash"></i>
+                    </a></td>
+                </tr>
+                </tbody>
+            </table>
+            <nav th:replace="~{paginator-nav :: paginator}"></nav>
+        </div>
+    </div>
 </div>
 <footer th:replace="~{layout/layout :: footer}"></footer>
 </body>
