--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -5,42 +5,54 @@
 <header th:replace="~{layout/layout :: header}"></header>
 <h1 class="text-primary text-center pt-5" th:text="${titulo}"></h1>
 <div class="container py-4 w-75">
-    <div class="card mx-auto bg-light">
+    <div class="card mx-auto bg-light mb-5">
         <div class="card-header fw-bold" th:text="${titulo}"></div>
         <div class="card-body">
-            <table class="table table-striped table-hover mt-3 mx-auto">
-                <thead>
-                <tr>
-                    <th scope="col">id</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Apellido</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Fecha</th>
-                    <th scope="col">Acciones</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="cliente: ${clientes}">
-                    <td th:text="${cliente.id}"></td>
-                    <td th:text="${cliente.nombre}"></td>
-                    <td th:text="${cliente.apellido}"></td>
-                    <td th:text="${cliente.email}"></td>
-                    <td th:text="${cliente.createAt}"></td>
-                    <td><a class="btn btn-success btn-sm me-1" th:href="@{/form}"><i
-                            class="bi bi-plus"></i></a><a class="btn btn-warning btn-sm me-1"
-                                                          th:href="@{/form/{id}(id=${cliente.id})}"> <i
-                            class="bi bi-pencil-square"></i></a><a class="btn btn-danger btn-sm"
-                                                                   th:href="@{/delete/{id}(id=${cliente.id})}"
-                                                                   onclick="return confirm('¿Está seguro de eliminar el cliente?')">
-                        <i class="bi bi-trash"></i>
-                    </a></td>
-                </tr>
-                </tbody>
-            </table>
-            <nav th:replace="~{paginator-nav :: paginator}"></nav>
+            <h4 class="card-title">
+                <a class="btn btn-success btn-xs mb-4" th:href="@{/form}">
+                    <i class="bi bi-person-plus"></i> Crear cliente
+                </a>
+            </h4>
+            <div class="table-responsive">
+                <table class="table table-striped table-hover mt-3 mx-auto">
+                    <thead>
+                    <tr>
+                        <th scope="col">id</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Apellido</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Fecha</th>
+                        <th scope="col">Acciones</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="cliente: ${clientes}">
+                        <td><a class="btn btn-primary btn-xs"
+                               th:href="@{/ver/{id}(id=${cliente.id})}" th:text="${cliente.id}"></a></td>
+                        <td th:text="${cliente.nombre}"></td>
+                        <td th:text="${cliente.apellido}"></td>
+                        <td th:text="${cliente.email}"></td>
+                        <td th:text="${cliente.createAt}"></td>
+                        <td>
+                            <a class="btn btn-warning btn-sm me-1" th:href="@{/form/{id}(id=${cliente.id})}">
+                                <i class="bi bi-pencil-square"></i>
+                            </a>
+                            <a class="btn btn-danger btn-sm"
+                               th:href="@{/delete/{id}(id=${cliente.id})}"
+                               onclick="return confirm('¿Está seguro de eliminar el cliente?')">
+                                <i class="bi bi-trash"></i>
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
+        <nav th:replace="~{paginator-nav :: paginator}"></nav>
     </div>
 </div>
-<footer th:replace="~{layout/layout :: footer}"></footer>
+<div class="mt-5">
+    <footer th:replace="~{layout/layout :: footer}"></footer>
+</div>
 </body>
 </html>
