--- a/src/main/resources/templates/ver.html
+++ b/src/main/resources/templates/ver.html
@@ -9,17 +9,39 @@
         <div class="card-header fw-bold" th:text="${titulo}"></div>
         <div class="card-body">
             <h4 class="card-title">
-                <a class="btn btn-primary btn-xs" th:href="@{/}"><i class="bi bi-arrow-left me-2"></i>Volver</a>
+                <a class="btn btn-success btn-xs" th:href="@{/}"><i class="bi bi-arrow-left me-2"></i>Volver</a>
             </h4>
             <img th:if="${cliente.foto != null and #strings.length(cliente.foto) > 0}"
                  class="img-thumbnail rounded float-start" style="max-width: 250px;"
                  th:alt="${cliente.foto}" th:src="@{/uploads/{id}(id=${cliente.foto})}"/>
             <ul class="list-group">
-                <li class="list-group-item" th:text="${cliente.nombre}"></li>
+                <li class="list-group-item active" th:text="${cliente.nombre}"></li>
                 <li class="list-group-item" th:text="${cliente.apellido}"></li>
                 <li class="list-group-item" th:text="${cliente.email}"></li>
                 <li class="list-group-item" th:text="${cliente.createAt}"></li>
             </ul>
+
+            <div class="alert alert-info my-4" th:if="${#lists.isEmpty(cliente.facturas)}"
+                 th:text="'No hay facturas asingandas para el cliente: ' + ${cliente.nombre} + ' ' + ${cliente.apellido}"></div>
+
+            <table class="table table-striped table-hover my-4" th:if="${not #lists.isEmpty(cliente.facturas)}">
+                <thead class="table-dark">
+                <tr>
+                    <th>Folio</th>
+                    <th>Descripcion</th>
+                    <th>Fecha</th>
+                    <th>Total</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="factura : ${cliente.facturas}">
+                    <td th:text="${factura.id}"></td>
+                    <td th:text="${factura.descripcion}"></td>
+                    <td th:text="${factura.createAt}"></td>
+                    <td th:text="${factura.total}"></td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
