--- a/src/main/resources/templates/factura/form.html
+++ b/src/main/resources/templates/factura/form.html
@@ -9,10 +9,10 @@
         <div class="card-header fw-bold" th:text="${titulo}"></div>
         <div class="card-body">
             <h4 class="card-title">
-                <a class="btn btn-secondary btn-xs" th:href="@{/}"><i class="bi bi-arrow-left me-2"></i>Volver</a>
+                <a class="btn btn-secondary btn-sm" th:href="@{/}"><i class="bi bi-arrow-left me-2"></i>Volver</a>
             </h4>
 
-            <form th:action="@{/factura/form/}" th:object="${factura}" method="post">
+            <form th:action="@{/factura/form}" th:object="${factura}" method="post">
 
                 <div class="mb-3">
                     <label for="cliente" class="form-label">Cliente:</label>
@@ -45,6 +45,20 @@
 
                 <table th:replace="~{factura/plantilla-items :: itemsFactura}"></table>
 
+                <table id="cargarItemProductos" class="table table-sm table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Precio</th>
+                        <th>Cantidad</th>
+                        <th>Total</th>
+                        <th>Eliminar</th>
+                    </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+
+                <h5>Total <span class="badge bg-secondary" id="gran_total">0</span></h5>
 
                 <button type="submit" class="btn btn-primary" th:text="${titulo}"></button>
             </form>
