--- a/src/main/resources/templates/factura/js/autocomplete-productos.html
+++ b/src/main/resources/templates/factura/js/autocomplete-productos.html
@@ -28,17 +28,73 @@
                 });
             },
 
-            focus: function(event, ui){
+            focus: function (event, ui) {
                 event.preventDefault();
                 $('input[name="buscar_producto"]').val(ui.item.label);
             },
 
             select: function (event, ui) {
-                $("#buscar_producto").val(ui.item.label);
+                //$("#buscar_producto").val(ui.item.label);
+
+                if (itemsHelper.hasProducto(ui.item.value)) {
+                    itemsHelper.incrementaCantidad(ui.item.value, ui.item.precio);
+                    return false;
+                }
+
+                let linea = $("#plantillaItemsFactura").html();
+                linea = linea.replace(/{ID}/g, ui.item.value);
+                linea = linea.replace(/{NOMBRE}/g, ui.item.label);
+                linea = linea.replace(/{PRECIO}/g, ui.item.precio);
+
+                $("#cargarItemProductos tbody").append(linea);
+                itemsHelper.calcularImporte(ui.item.value, ui.item.precio, 1);
                 return false;
             }
         });
+        $("form").submit(function () {
+            $("#plantillaItemsFactura").remove();
+        });
     });
+
+    let itemsHelper = {
+        calcularImporte: function (id, precio, cantidad) {
+            $("#total_importe_" + id).html(parseInt(precio) * parseInt(cantidad));
+            this.calcularGranTotal();
+        },
+
+        hasProducto: function (id) {
+
+            let resultado = false;
+
+            $('input[name="item_id[]"]').each(function () {
+                if (parseInt(id) === parseInt($(this).val())) {
+                    resultado = true;
+                }
+            });
+            return resultado;
+        },
+
+        incrementaCantidad: function (id, precio) {
+            let cantidad = $("#cantidad_" + id).val() ? parseInt($("#cantidad_" + id).val()) : 0;
+            $("#cantidad_" + id).val(++cantidad);
+            this.calcularImporte(id, precio, cantidad);
+        },
+
+        eliminarLineaFactura: function (id) {
+            $("#row_" + id).remove();
+            this.calcularGranTotal();
+        },
+
+        calcularGranTotal: function () {
+            let total = 0;
+
+            $('span[id^="total_importe_"]').each(function () {
+                total += parseInt($(this).html());
+            });
+
+            $("#gran_total").html(total);
+        }
+    }
 </script>
 </body>
 </html>
