--- a/src/main/resources/templates/factura/plantilla-items.html
+++ b/src/main/resources/templates/factura/plantilla-items.html
@@ -2,13 +2,19 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <body>
 <table th:fragment="itemsFactura" class="d-none">
-<tbody id="plantillaItemsFactura">
-<tr id="row_{ID}">
-    <td class="d-none"><input type="hidden" value="{ID}" name="item_id[]" /></td>
-    <td>{NOMBRE}</td>
-    <td>{PRECIO}</td>
-</tr>
-</tbody>
+    <tbody id="plantillaItemsFactura">
+    <tr id="row_{ID}">
+        <td class="d-none"><input type="hidden" value="{ID}" name="item_id[]"/></td>
+        <td>{NOMBRE}</td>
+        <td>{PRECIO}</td>
+        <td><input type="number" value="1" name="cantidad[]" id="cantidad_{ID}" class="form-control col-sm-4"
+                   onchange="itemsHelper.calcularImporte({ID}, {PRECIO}, this.value);" min="1"/></td>
+        <td><span id="total_importe_{ID}">0</span></td>
+        <td class="text-center"><a href="#" class="btn btn-danger btn-sm"
+                                   onclick="itemsHelper.eliminarLineaFactura({ID});"><i class="bi bi-x"></i>
+        </a></td>
+    </tr>
+    </tbody>
 </table>
 </body>
 </html>
