--- a/src/main/resources/templates/ver.html
+++ b/src/main/resources/templates/ver.html
@@ -33,6 +33,8 @@
                     <th>Descripcion</th>
                     <th>Fecha</th>
                     <th>Total</th>
+                    <th>Detalle</th>
+                    <th>Eliminar</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -41,6 +43,15 @@
                     <td th:text="${factura.descripcion}"></td>
                     <td th:text="${factura.createAt}"></td>
                     <td th:text="${factura.total}"></td>
+                    <td><a class="btn btn-info btn-sm"
+                           th:href="@{/factura/ver/{id}(id=${factura.id})}"><i
+                            class="bi bi-eye-fill"></i>
+                    </a></td>
+                    <td><a class="btn btn-danger btn-sm"
+                           th:href="@{/factura/eliminar/{id}(id=${factura.id})}"
+                           onclick="return confirm('¿Está seguro de eliminar la factura?')">
+                        <i class="bi bi-trash"></i>
+                    </a></td>
                 </tr>
                 </tbody>
             </table>
