--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -42,6 +42,8 @@
         </div>
     </div>
 </div>
-<footer th:replace="~{layout/layout :: footer}"></footer>
+<div class="mt-5">
+    <footer th:replace="~{layout/layout :: footer}"></footer>
+</div>
 </body>
 </html>
