--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head th:replace="~{layout/layout :: head}"></head>
 <body>
 <header th:replace="~{layout/layout :: header}"></header>
@@ -9,7 +9,7 @@
         <div class="card-header fw-bold" th:text="${titulo}"></div>
         <div class="card-body">
             <h4 class="card-title">
-                <a class="btn btn-success btn-sm mb-4" th:href="@{/form}">
+                <a sec:authorize="hasRole('ROLE_ADMIN')" class="btn btn-success btn-sm mb-4" th:href="@{/form}">
                     <i class="bi bi-person-plus"></i> Crear cliente
                 </a>
             </h4>
@@ -17,35 +17,37 @@
                 <table class="table table-striped table-hover mt-3 mx-auto">
                     <thead>
                     <tr>
-                        <th scope="col">id</th>
+                        <th sec:authorize="hasRole('ROLE_USER')" scope="col">id</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Apellido</th>
                         <th scope="col">Email</th>
                         <th scope="col">Fecha</th>
-                        <th class="text-center">Crear factura</th>
-                        <th class="text-center">Editar cliente</th>
-                        <th class="text-center">Eliminar cliente</th>
+                        <th sec:authorize="hasRole('ROLE_ADMIN')" class="text-center">Crear factura</th>
+                        <th sec:authorize="hasRole('ROLE_ADMIN')" class="text-center">Editar cliente</th>
+                        <th sec:authorize="hasRole('ROLE_ADMIN')" class="text-center">Eliminar cliente</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr th:each="cliente: ${clientes}">
-                        <td><a class="btn btn-primary btn-xs"
-                               th:href="@{/ver/{id}(id=${cliente.id})}" th:text="${cliente.id}"></a></td>
+                        <td sec:authorize="hasRole('ROLE_USER')"><a class="btn btn-primary btn-xs"
+                                                                    th:href="@{/ver/{id}(id=${cliente.id})}"
+                                                                    th:text="${cliente.id}"></a></td>
                         <td th:text="${cliente.nombre}"></td>
                         <td th:text="${cliente.apellido}"></td>
                         <td th:text="${cliente.email}"></td>
                         <td th:text="${cliente.createAt}"></td>
-                        <td class="text-center">
+                        <td sec:authorize="hasRole('ROLE_ADMIN')" class="text-center">
                             <a class="btn btn-success" th:href="@{/factura/form/{id}(id=${cliente.id})}"><i
                                     class="bi bi-plus"></i></a>
                         </td>
-                        <td class="text-center">
+                        <td sec:authorize="hasRole('ROLE_ADMIN')" class="text-center">
                             <a class="btn btn-warning" th:href="@{/form/{id}(id=${cliente.id})}">
                                 <i class="bi bi-pencil-square"></i>
                             </a>
                         </td>
-                        <td class="text-center"><a class="btn btn-danger" th:href="@{/eliminar/{id}(id=${cliente.id})}"
-                                                   onclick="return confirm('¿Está seguro de eliminar el cliente?')">
+                        <td sec:authorize="hasRole('ROLE_ADMIN')" class="text-center"><a class="btn btn-danger"
+                                                                                         th:href="@{/eliminar/{id}(id=${cliente.id})}"
+                                                                                         onclick="return confirm('¿Está seguro de eliminar el cliente?')">
                             <i class="bi bi-trash"></i>
                         </a>
                         </td>
