--- a/src/main/resources/templates/error_403.html
+++ b/src/main/resources/templates/error_403.html
@@ -5,15 +5,12 @@
 <header th:replace="~{layout/layout :: header}"></header>
 <div class="container py-4">
     <div class="card bg-danger text-white mx-auto">
-        <div class="card-header fw-bold">Error: Acceso Denegado!</div>
+        <div class="card-header fw-bold" th:text="#{text.security.error.403.titulo}">Error: Acceso Denegado!</div>
         <div class="card-body">
-            <h5 class="card-title">
-                Lo sentimos <span th:text="${#authentication?.name}"></span>, No tienes permisos para acceder a
-                este recurso
-            </h5>
-            <a class="btn btn-outline-light btn-xs mb-4 mt-5" role="button" th:href="@{/}">
-                <i class="bi bi-arrow-left me-2"></i> Ir al inicio
-            </a>
+            <h5 class="card-title" th:utext="#{text.security.error.403.permiso(${#authentication.name})}"></h5>
+            <a th:href="@{/}" class="btn btn-outline-light" role="button"
+               th:text="#{text.security.error.403.volver}"><i class="bi bi-arrow-left me-2"></i> Ir al
+                inicio</a>
         </div>
     </div>
 </div>
