--- a/src/main/resources/templates/factura/ver.html
+++ b/src/main/resources/templates/factura/ver.html
@@ -10,33 +10,36 @@
         <div class="card-body">
             <h4 class="card-title">
                 <a class="btn btn-success btn-xs mb-4" th:href="@{/ver/{id}(id=${factura.cliente.id})}">
-                    <i class="bi bi-arrow-left me-2"></i>Volver
+                    <i class="bi bi-arrow-left me-2"></i>
+                    <span th:text="#{text.global.volver}">Volver</span>
                 </a>
             </h4>
 
             <ul class="list-group my-2">
-                <li class="list-group-item list-group-item-primary" th:text="'Datos del cliente'"></li>
+                <li class="list-group-item list-group-item-primary" th:text="#{text.factura.ver.datos.cliente}"></li>
                 <li class="list-group-item" th:text="${factura.cliente}"></li>
                 <li class="list-group-item" th:text="'Email: ' + ${factura.cliente.email}"></li>
             </ul>
 
             <ul class="list-group my-2">
-                <li class="list-group-item list-group-item-success" th:text="'Datos de la factura'"></li>
-                <li class="list-group-item" th:text="'Folio: ' + ${factura.id}"></li>
-                <li class="list-group-item" th:text="'Descripcion: ' + ${factura.descripcion}"></li>
-                <li class="list-group-item" th:text="'Fecha: ' + ${factura.createAt}"></li>
+                <li class="list-group-item list-group-item-success" th:text="#{text.factura.ver.datos.factura}"></li>
+                <li class="list-group-item" th:text="#{text.cliente.factura.folio} + ': ' + ${factura.id}"></li>
+                <li class="list-group-item"
+                    th:text="#{text.cliente.factura.descripcion} + ': ' + ${factura.descripcion}"></li>
+                <li class="list-group-item" th:text="#{text.cliente.factura.fecha} + ': ' + ${factura.createAt}"></li>
             </ul>
 
             <div class="alert alert-info my-4" th:if="${#lists.isEmpty(factura.items)}"
-                 th:text="'No hay productos para la factura: ' + ${factura.descripcion}"></div>
+                 th:text="#{text.factura.ver.no.lineas} + ' ' + ${factura.descripcion}"></div>
 
-            <table th:if="${not #lists.isEmpty(factura.items)}" class="table table-striped table-hover table-bordered my-3">
+            <table th:if="${not #lists.isEmpty(factura.items)}"
+                   class="table table-striped table-hover table-bordered my-3">
                 <thead class="table-info">
                 <tr>
-                    <th>Producto</th>
-                    <th>Precio</th>
-                    <th>Cantidad</th>
-                    <th>Total</th>
+                    <th th:text="#{text.factura.form.item.nombre}">Producto</th>
+                    <th th:text="#{text.factura.form.item.precio}">Precio</th>
+                    <th th:text="#{text.factura.form.item.cantidad}">Cantidad</th>
+                    <th th:text="#{text.factura.form.item.total}">Total</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -49,14 +52,18 @@
                 </tbody>
             </table>
 
-            <h5 class="float-end fw-bold">Gran total: <span class="badge bg-secondary"
-                                                            th:text="${factura.total}"></span></h5>
+            <h5 class="float-end fw-bold">
+                <span th:text="#{text.factura.form.total}">Gran total:</span>
+                <span class="badge bg-secondary" th:text="${factura.total}"></span>
+            </h5>
 
             <div class="card border border-info mb-4" style="max-width: 20rem;">
-                <div class="card-header">Observaciones</div>
+                <div class="card-header" th:text="#{text.factura.form.observacion}">Observaciones</div>
                 <div class="card-body">
-                    <p class="card-text" th:text="${factura.observacion}" th:if="${not #strings.isEmpty(factura.observacion)}"></p>
-                    <h4 class="card-title" th:if="${#strings.isEmpty(factura.observacion)}">No tiene observaciones</h4>
+                    <p class="card-text" th:text="${factura.observacion}"
+                       th:if="${not #strings.isEmpty(factura.observacion)}"></p>
+                    <h4 class="card-title" th:if="${#strings.isEmpty(factura.observacion)}"
+                        th:text="#{text.factura.ver.no.observaciones}">No tiene observaciones</h4>
                 </div>
             </div>
         </div>
