--- a/src/main/resources/templates/paginator-nav.html
+++ b/src/main/resources/templates/paginator-nav.html
@@ -5,9 +5,9 @@
     <ul class="pagination">
         <li class="page-item"
             th:class="${page.first? 'page-item disabled': 'page-item'}"><span
-                class="page-link" th:if="${page.first}">Primera</span> <a
+                class="page-link" th:if="${page.first}" th:text="#{text.paginator.first}">Primera</span> <a
                 th:if="${not page.first}" th:href="@{${page.url}(page=0)}"
-                class="page-link">Primera</a></li>
+                class="page-link" th:text="#{text.paginator.first}">Primera</a></li>
         <li class="page-item"
             th:class="${not page.hasPrevious? 'page-item disabled': 'page-item'}"><span
                 class="page-link" th:if="${not page.hasPrevious}">&laquo;</span> <a
@@ -28,10 +28,10 @@
                 class="page-link">&raquo;</a></li>
         <li class="page-item"
             th:class="${page.last? 'page-item disabled': 'page-item'}"><span
-                class="page-link" th:if="${page.last}">&Uacute;ltima</span> <a
+                class="page-link" th:if="${page.last}" th:text="#{text.paginator.last}">&Uacute;ltima</span> <a
                 th:if="${not page.last}"
                 th:href="@{${page.url}(page=${page.totalPaginas - 1})}"
-                class="page-link">&Uacute;ltima</a></li>
+                class="page-link" th:text="#{text.paginator.last}">&Uacute;ltima</a></li>
     </ul>
 </nav>
 </body>
